--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,14 +5,14 @@
   <meta name="description" content="{% if page.summary %}{{ page.summary | strip_html | strip_newlines | truncate: 160 }}{% endif %}">
   <meta name="keywords" content="{{page.tags}}{% if page.tags %}, {% endif %} {{page.keywords}}">
   <title>{{ page.title }} | {{ site.site_title }}</title>
-  <link rel="stylesheet" href="{{site.url}}/syntax.css">
+  <link rel="stylesheet" href="{{site.url}}/css/syntax.css">
 
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <!--<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">-->
-  <link rel="stylesheet" href="{{site.url}}/modern-business.css">
-  <link rel="stylesheet" href="{{site.url}}/lavish-bootstrap.css">
-  <link rel="stylesheet" href="{{site.url}}/theme-green.css">
-  <link rel="stylesheet" href="{{site.url}}/customstyles.css">
+  <link rel="stylesheet" href="{{site.url}}/css/modern-business.css">
+  <link rel="stylesheet" href="{{site.url}}/css/lavish-bootstrap.css">
+  <link rel="stylesheet" href="{{site.url}}/css/theme-green.css">
+  <link rel="stylesheet" href="{{site.url}}/css/customstyles.css">
   <!-- link rel="stylesheet" href="/css/gcs.css" type="text/css"/ -->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
